# blueprintengine

./: .gitignore  BUILD_FINAL_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_REPORT.md  BUILD_SUCCESS.md  COMPILATION_PROGRESS_REPORT.md  COMPILATION_SESSION_SUMMARY.md  COMPILE_STATUS.md  DEBUG_CONTINUATION.md  DEBUG_STATUS.md  app.json  build.bat  build.ps1  build_direct.bat  find_compiler.ps1  fix_includes.ps1  package-lock.json  package.json  qbound_fix.txt  quick_fixes.ps1  test_build.bat  test_engine.cpp
.expo/types/: router.d.ts
app/: blueprints.tsx  editor.tsx  index.tsx  node-library.tsx  web-editor.tsx
app/classes/: Blueprint.ts  Node.ts  Pin.ts
app/constants/: blueprint-constants.ts  help-content.ts  menu-descriptions.ts  menu-options.ts
app/hooks/: useScreenFit.ts
app/modules/: blueprint-data.ts
app/stores/: connection-store.ts  editor-store.ts  history-store.ts
app/types/: blueprint.ts  compilation.ts  editor.ts  execution.ts  node-library.ts  nodes.ts
app/utils/: ai-blueprint-chat.ts  ai-node-suggester.ts  batch-operations.ts  blueprint-import-export.ts  blueprint-storage.ts  blueprint-template-library.ts  blueprint-templates.ts  blueprint-validator.ts  blueprint-versioning.ts  bookmarks.ts  collaboration-sync.ts  connection-validator.ts  custom-templates.ts  editor-actions.ts  export-formats.ts  favorites.ts  graph-executor.ts  grid-snap.ts  ide-dispatcher.ts  keyboard-shortcuts.ts  layout-algorithms.ts  menu-handlers.ts  menu-system.ts  node-alignment.ts  node-duplicator.ts  node-grouper.ts  screen-fit.ts  toolbar-manager.ts  ue5-blueprint-generator.ts  uml-to-blueprint.ts
app/web/: index.tsx
build_compiled/: objlist.rsp
build_compiled/lib/: LunaLite_Engine.lib
components/editor/: AIBlueprintChat.tsx  AINodeSuggester.tsx  AdvancedExport.tsx  AlignmentTools.tsx  BatchOperationsPanel.tsx  BlueprintAnalytics.tsx  BlueprintAnalyticsPanel.tsx  BlueprintEditorHub.tsx  BlueprintInspector.tsx  BlueprintSharing.tsx  BlueprintValidator.tsx  BlueprintVisualEditor.tsx  BookmarksManager.tsx  CanvasControls.tsx  ChangelogViewer.tsx  CollaborationPanel.tsx  CompilationPanel.tsx  CompileStatusBar.tsx  ConnectionHints.tsx  ConnectionPresets.tsx  CustomTemplatesManager.tsx  DebugConsole.tsx  DebugMode.tsx  DetailsPanel.tsx  DiffViewer.tsx  DraggableNode.tsx  EdgeRenderer.tsx  EditorCanvas.tsx  EditorEdge.tsx  EditorInspector.tsx  EditorNode.tsx  EditorToolbar.tsx  ExecutionVisualizer.tsx  FavoritesPanel.tsx  GraphExecutionVisualizer.tsx  HelpAndShortcuts.tsx  KeyboardShortcutsHelp.tsx  LayoutManager.tsx  LiveConnectionRenderer.tsx  MainMenu.tsx  (+26 more)
components/web/: WebEditorLayout.tsx
cpp_src/: APIGUIWindow.h  BattleManager.h  CMakeLists.txt  ColorManager.h  ConfigManager.h  DataManager.h  EffectManager.h  Game_Action.h  Game_Actor.h  Game_Actors.h  Game_Armor.h  Game_BattlerBase.cpp  Game_BattlerBase.h  Game_Battler_Ex.h  Game_CommonEvent.h  Game_Event.h  Game_Followers.h  Game_Interpreter.h  Game_Item.h  Game_Map.h  Game_Party.h  Game_Picture.h  Game_Player.h  Game_Screen_Ex.cpp  Game_Screen_Ex.h  Game_SelfSwitches.h  Game_Skill.h  Game_Temp_Ex.h  Game_Troop.h  Game_Variables_Ex.h  Game_Vehicle.h  Game_Weapon.h  ImageManager_Base.h  ImageManager_Ex.h  PluginManager.h  QByteArray  QCloseEvent  QDate  QDesktopServices  QDir  (+43 more)
cpp_src/include/core/: BattleSystem.h  EventSystem.h  GameActorFull.h  GameMap.h  GameObject.h  GameParty.h  StateMachine.h
cpp_src/include/data/: Database.h
cpp_src/include/graphics/: Animation.h  GameScreen.h  Sprite.h
cpp_src/include/managers/: AudioManager.h  ConfigurationManager.h  DataManagerCore.h  GameManager.h  ResourceManager.h  SceneManagerCore.h
cpp_src/include/scenes/: SceneBase.h
cpp_src/include/ui/: WindowBase.h  WindowCommand.h
cpp_src/include/utils/: InputHandler.h  JsonUtils.h  TimeManager.h  Types.h
cpp_src/include/wolfman/: AI.h  AudioManager.h  Core.h  Debug.h  EntityComponentSystem.h  InputManager.h  Network.h  ParticleSystem.h  Physics.h  Renderer.h  Scripting.h  Utils.h
docs/: API_REFERENCE.md  BLUEPRINT_EDITOR_GUIDE.md  BLUEPRINT_SYSTEM_GUIDE.md  BUG_FIXES.md  BUTTONS_FIXED.md  MENU_BUTTONS_COMPLETE.md  MENU_SYSTEM_DETAILS.md  UE5_BLUEPRINT_GENERATION_GUIDE.md  WEB_VERSION_GUIDE.md
hooks/: useKeyboardShortcuts.ts
